force-app/main/default/objects/Opportunity/fields/breadwinner_qbo__Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid &amp; Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>