force-app/main/default/objects/Opportunity/fields/current_Date__c.field-meta.xml
<CustomField>
    <fullName>current_Date__c</fullName>
    <formula>TEXT(MONTH(Date__c))+&quot;/&quot; +TEXT(DAY(Date__c))+&quot;/&quot; +TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current Date</label>
    <type>Text</type>
</CustomField>