force-app/main/default/objects/Opportunity/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <formula>Today()+366</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due date</label>
    <type>Date</type>
</CustomField>