force-app/main/default/objects/Opportunity/fields/Gross_Premium__c.field-meta.xml
<CustomField>
    <fullName>Gross_Premium__c</fullName>
    <formula>Account.Indicated_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>