force-app/main/default/objects/Opportunity/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>(TEXT(YEAR(Date__c))&amp;&quot;&quot;&amp; LPAD(TEXT(MONTH(Date__c)),2,&quot;0&quot;)&amp; &quot;&quot; &amp;LPAD(TEXT(DAY (Date__c)),2,&quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>