force-app/main/default/objects/Opportunity/fields/QB_Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>QB_Total_Amount_Invoiced__c</fullName>
    <label>Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>